# NicayneOS-

./: FINAL_SYSTEM_AUDIT_REPORT_20250601_040154.txt  analyze_10page_extraction.py  analyze_missing_data.py  app.py  app_current_with_heat_feature.py  app_old.py  audit_invoice_integrity.py  check_timberlea_files.py  comprehensive_route_test.py  comprehensive_system_audit.py  create_admin_user.py  create_backup.py  create_finished_tags_sheet.py  create_processed_sheet.py  debug_5page_extraction.py  debug_coil_count.py  debug_extraction.py  debug_maksteel_extraction.py  debug_missing_coils.py  debug_only_extraction.py  debug_pdf_text.py  email_utils.py  final_system_audit_report.py  finished_tags.json  form_functionality_test.py  generate_bol_pdf.py  generate_finished_tag_pdf.py  generate_invoice_pdf.py  generate_work_order_pdf.py  invoice_audit_report_20250601_014900.json  invoice_audit_report_20250601_014913.json  invoice_audit_report_20250601_014914.json  invoice_audit_report_20250601_015015.json  invoice_audit_report_20250601_015231.json  invoice_audit_report_20250601_021909.json  invoice_audit_report_20250602_184715.json  job_history.json  live_system_test.py  pyproject.toml  route_test_report_20250602_181850.json  (+19 more)
backup/nicayne_os_full_backup_2025_06_01/: NICAYNE_OS_SYSTEM_OVERVIEW.md  app.py  bol_tracking.json  config.json  drive_utils.py  generate_bol_pdf.py  generate_finished_tag_pdf.py  generate_invoice_pdf.py  generate_work_order_pdf.py  invoice_tracking.json  pyproject.toml  supplier_prompts.json
backup/nicayne_os_full_backup_2025_06_01/templates/: base.html  (+13 more)
(+143 files in other folders)
